--- a/resources_eng/src/messages/CompilerBundle.properties
+++ b/resources_eng/src/messages/CompilerBundle.properties
@@ -232,4 +232,7 @@ generated.ant.build.compile.modules.fail.custom.comipilers=Conflict between cust
 generated.ant.build.custom.compilers.comment=Custom Compiler Taskdefs
 label.generate.ant.script.inline.runtime.classpaths=Inline runtime classpaths
 label.generate.ant.script.generate.idea.home=Use current IDEA instance for idea.home property
-label.resource.patterns.legend=<html>Use <b>;</b> to separate patterns and <b>!</b> to negate a pattern.<br/>Accepted wildcards: <b>?</b> - exactly one symbol; <b>*</b> - zero or more symbols</html>
+label.resource.patterns.legend=<html>\
+  Use <b>;</b> to separate patterns and <b>!</b> to negate a pattern.<br/>\
+  Accepted wildcards: <b>?</b> - exactly one symbol; <b>*</b> - zero or more symbols; <b>/</b> - path separator; <b>/**/</b> - any number of directories<br>\
+  </html>
