trilead for ssh (and pserver transport) in CVS

--- a/plugins/cvs2/cvs_util/src/com/intellij/cvsSupport2/CvsBundle.properties
+++ b/plugins/cvs2/cvs_util/src/com/intellij/cvsSupport2/CvsBundle.properties
@@ -74,6 +74,7 @@ operation.name.check.out.project=Check Out Project
 message.error.checkout=CVS Error: {0}
 progress.text.processing=Processing {0}
 operation.name.test.connection=Test Connection
+test.connection.login.failed.text=Login failed
 cvs.root.configuration.on.branch.string.representation={0} (on.branch {1})
 cvs.root.configuration.on.date.string.representation={0} (for date {1})
 dialog.title.global.cvs.settings=Global CVS Settings
