added Introduce variable for Python

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -85,6 +85,15 @@ INSP.NAME.method.over=Method signature does not match signature of overridden me
 # PyTrailingSemicolonInspection
 INSP.NAME.trailing.semicolon=Trailing semicolon in statement
 
+# Refactoring
+# introduce
+refactoring.introduce.name.error=Incorrect name
+refactoring.introduce.selection.error=Cannot perform refactoring using selected element(s)
+
+# introduce variable
+refactoring.introduce.variable.dialog.title=Introduce variable
+refactoring.introduce.variable.scope.error=Name clashes with existing variable or parameter
+
 ### Annotators ###
 ANN.deleting.none=deleting None
 ANN.assign.to.none=assignment to None
