IDEADEV-39905 (Intention to replace extension of Adapter class with direct implementation of Listener interfaces)

--- a/plugins/IntentionPowerPak/src/META-INF/plugin.xml
+++ b/plugins/IntentionPowerPak/src/META-INF/plugin.xml
@@ -161,6 +161,11 @@
       <categoryKey>intention.category.declaration</categoryKey>
     </intentionAction>
 
+    <intentionAction>
+      <className>com.siyeh.ipp.adapter.AdapterToListenerIntention</className>
+      <categoryKey>intention.category.declaration</categoryKey>
+    </intentionAction>
+
     <!-- Imports -->
 
     <intentionAction>
