--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -121,6 +121,7 @@ copy.concatenated.string.to.clipboard.intention.name=Copy String concatenation t
 copy.concatenated.string.to.clipboard.intention.family.name=Copy String Concatenation Text to the Clipboard
 flip.expression.intention.family.name=Flip Binary Expression
 flip.setter.call.intention.family.name=Flip Setter Call(s)
+adapter.to.listener.intention.family.name=Replace Adapter extensions with Listener implementation
 
 #hand made
 demorgans.intention.name1=Replace '\\&\\&' with '||'
@@ -139,7 +140,7 @@ status.bar.escape.highlighting.message=Press Escape to remove the highlighting
 1.fully.qualified.name.status.bar.escape.highlighting.message=1 fully qualified name replaced with import (press Escape to remove highlighting)
 multiple.fully.qualified.names.status.bar.escape.highlighting.message={0} fully qualified names replaced with import (press Escape to remove highlighting)
 extract.increment.intention.name=Extract ''{0}''
-flip.assert.literal.intention.name=Replace ''{0}()'' with ''{1}()''
+flip.assert.literal.intention.name=Replace ''{0}()'' with ''{n1}()''
 replace.assert.equals.with.assert.literal.intention.name=Replace ''assertEquals()'' with ''{0}()''
 replace.assert.literal.with.assert.equals.intention.name=Replace ''{0}()'' with ''assertEquals({1}, ...)''
 replace.assert.literal.with.assert.equals.intention.name2=Replace ''{0}()'' with ''assertEquals()''
@@ -149,6 +150,7 @@ replace.operator.assignment.with.assignment.intention.name=Replace ''{0}'' with 
 replace.some.operator.with.other.intention.name=Replace ''{0}'' with ''{1}''
 swap.method.call.arguments.intention.name=Swap ''{0}'' and ''{1}''
 flip.setter.call.intention.name=Flip Setter Call
+adapter.to.listener.intention.name=Replace extension of ''{0}'' with Listener implementation
 
 #categories
 intention.category.numbers=Numbers
