initial version of dependency scopes (only test-only dependencies actually implemented so far)

--- a/platform-resources_eng/src/messages/ProjectBundle.properties
+++ b/platform-resources_eng/src/messages/ProjectBundle.properties
@@ -177,6 +177,7 @@ module.libraries.exclude.all.button=Exclude All
 modules.order.export.title=Order/Export
 modules.classpath.title=Dependencies
 modules.order.export.export.column=Export
+modules.order.export.scope.column=Scope
 button.move.up=Move &Up
 button.move.down=Move &Down
 module.remove.confirmation.prompt=Remove {1, choice, 1#Module|2#Modules} {0} from the project?\nNo files will be deleted.
