--- a/platform-resources_eng/src/messages/CodeInsightBundle.properties
+++ b/platform-resources_eng/src/messages/CodeInsightBundle.properties
@@ -453,3 +453,4 @@ create.tagfile.text=Create Tag File {0}
 rename.file.fix=Rename File
 rename.public.class.family=Rename Public Class
 rename.public.class.text=Rename class ''{0}'' to ''{1}''
+rename.named.element.text=Rename ''{0}'' to ''{1}''
