--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -121,7 +121,9 @@ copy.concatenated.string.to.clipboard.intention.name=Copy String concatenation t
 copy.concatenated.string.to.clipboard.intention.family.name=Copy String Concatenation Text to the Clipboard
 flip.expression.intention.family.name=Flip Binary Expression
 flip.setter.call.intention.family.name=Flip Setter Call(s)
-adapter.to.listener.intention.family.name=Replace Adapter extensions with Listener implementation
+adapter.to.listener.intention.family.name=Replace Adapter Extension with Listener Implementation
+reverse.for.loop.direction.intention.family.name=Reverse Direction of For Loop
+reverse.for.loop.direction.intention.name=Reverse direction of for loop.
 
 #hand made
 demorgans.intention.name1=Replace '\\&\\&' with '||'
