--- a/platform-resources_eng/src/messages/RefactoringBundle.properties
+++ b/platform-resources_eng/src/messages/RefactoringBundle.properties
@@ -248,7 +248,7 @@ method.duplicates.found.message={0, choice, 1#1 code fragment|2#{0,number} code 
 0.contains.call.with.null.argument.for.parameter.1={0} contains call with null argument for parameter {1}
 no.members.selected=No members selected
 0.already.exists.in.the.target.class={0} already exists in the target class.
-0.is.1.and.will.not.be.accessible.from.2.in.the.target.class={0} is {1} and will not be accessible from {2} in the target class.
+0.is.1.and.will.not.be.accessible.from.2.in.the.target.class={0} is {1} and will not be accessible from {2}.
 renamed.class.will.hide.0.in.1=Renamed class will hide {0} in {1}
 there.is.already.a.0.it.will.conflict.with.the.renamed.1=There is already a {0}. It will conflict with the renamed {1}
 0.will.override.renamed.1={0} will override renamed {1}
