--- a/plugins/maven/src/main/resources/ProjectBundle.properties
+++ b/plugins/maven/src/main/resources/ProjectBundle.properties
@@ -25,7 +25,7 @@ maven.project.reimport=Re-import
 maven.project.importing=Importing Maven projects
 maven.project.importing.finished=Finished importing Maven projects
 maven.project.import.waiting.for.active.process=Waiting for an active process
-maven.post.processing=Configuring additional components
+maven.post.processing=Configuring Maven projects
 
 module.group.name={0} and modules
 
