--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -142,7 +142,7 @@ status.bar.escape.highlighting.message=Press Escape to remove the highlighting
 1.fully.qualified.name.status.bar.escape.highlighting.message=1 fully qualified name replaced with import (press Escape to remove highlighting)
 multiple.fully.qualified.names.status.bar.escape.highlighting.message={0} fully qualified names replaced with import (press Escape to remove highlighting)
 extract.increment.intention.name=Extract ''{0}''
-flip.assert.literal.intention.name=Replace ''{0}()'' with ''{n1}()''
+flip.assert.literal.intention.name=Replace ''{0}()'' with ''{1}()''
 replace.assert.equals.with.assert.literal.intention.name=Replace ''assertEquals()'' with ''{0}()''
 replace.assert.literal.with.assert.equals.intention.name=Replace ''{0}()'' with ''assertEquals({1}, ...)''
 replace.assert.literal.with.assert.equals.intention.name2=Replace ''{0}()'' with ''assertEquals()''
