added Introduce constant for Python, fix some bugs in introduce variable

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -91,8 +91,12 @@ refactoring.introduce.name.error=Incorrect name
 refactoring.introduce.selection.error=Cannot perform refactoring using selected element(s)
 
 # introduce variable
-refactoring.introduce.variable.dialog.title=Introduce variable
+refactoring.introduce.variable.dialog.title=Introduce Variable
 refactoring.introduce.variable.scope.error=Name clashes with existing variable or parameter
+
+# introduce constant
+refactoring.introduce.constant.dialog.title=Introduce Constant
+refactoring.introduce.constant.scope.error=Name is already declared in scope
 
 ### Annotators ###
 ANN.deleting.none=deleting None
