annotation processors support

--- a/resources_eng/src/messages/CompilerBundle.properties
+++ b/resources_eng/src/messages/CompilerBundle.properties
@@ -81,6 +81,7 @@ progress.found.dependent.files=Found {0} dependent files
 error.compiler.internal.error=Compiler internal error. Process terminated with exit code {0}
 error.bad.class.file.format=Bad class file format:\n{0}
 java.compiler.description=Java Compiler
+annotation.processing.compiler.description=Java Annotation Processing Compiler
 resource.compiler.description=Resource Compiler
 progress.copying.resources=Copying resources...
 progress.generating.rmi.stubs=Generating RMI stubs...
