--- a/platform-resources_eng/src/messages/IdeBundle.properties
+++ b/platform-resources_eng/src/messages/IdeBundle.properties
@@ -251,6 +251,7 @@ error.project.file.is.corrupted=Project file is corrupted
 title.cannot.convert.project=Cannot Convert Project
 dialog.title.convert.project=Convert Project
 label.project.has.older.format.text=The project ''{0}'' has an older format.
+label.project.has.older.format.the.following.conversions.will.be.performed.text=<html><body>The project ''{0}'' has an older format. The following conversions will be performed:</body></html>
 label.project.has.older.format.and.will.be.converted.text=<html><body>The project ''{0}'' has an older format. It will be converted to the new format.</body></html>
 radio.convert.project.text=&Convert to the new format now. You will not be able to open the project by earlier versions of IDEA.
 radio.dont.convert.project.text=Convert &later. Some features will be unavailable until you convert the project.
