added surround with functionality (PY-220)

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -31,6 +31,11 @@ QFIX.failed.to.add.method=<br/>Failed to add a method!<br/><br/>
 QFIX.remove.trailing.semicolon=Remove trailing semicolon
 
 
+### Surround with templates ###
+surround.with.whileelse.template=while / else
+surround.with.return.template=return
+surround.with.try.except.template=try / except
+
 ### Inspections: INSP ###
 INSP.GROUP.python=Python
 
