IDEADEV-39976 (Intention to reverse a for loop)

--- a/plugins/IntentionPowerPak/src/META-INF/plugin.xml
+++ b/plugins/IntentionPowerPak/src/META-INF/plugin.xml
@@ -256,6 +256,10 @@
       <className>com.siyeh.ipp.braces.AddBracesIntention</className>
       <categoryKey>intention.category.control.flow</categoryKey>
     </intentionAction>
+    <intentionAction>
+      <className>com.siyeh.ipp.forloop.ReverseForLoopDirectionIntention</className>
+      <categoryKey>intention.category.control.flow</categoryKey>
+    </intentionAction>
 
     <!--
     <intentionAction>
