IDEADEV-38976:Support inner classes in Groovy 1.7

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -157,6 +157,7 @@ cannot.instantiate.interface=Cannot instantiate interface ''{0}''
 cannot.assign=Cannot assign ''{0}'' to ''{1}''
 invalid.lvalue=Invalid value to assign to
 duplicate.class=Class ''{0}'' already exists in ''{1}''
+duplicate.inner.class=Duplicate class: ''{0}''
 script.generated.with.same.name=There is a synthetic class ''{0}'' generated for script code
 variable.already.defined=Variable ''{0}'' already defined
 field.already.defined=Field ''{0}'' already defined
@@ -284,3 +285,7 @@ assignment.expected='=' expected
 tuple.cant.be.placed.in.class=Multiple assignments are not allowed for fields
 immutable.class.should.be.final=Class with '@Immutable' annotation should be final
 singleton.class.should.have.private.constructor=Class with '@Singleton' annotation should have private constructor
+qualified.new.of.static.class=Qualified new of static class
+cannot.have.static.declarations=Inner classes cannot have static declarations
+unknown.class=unknown class ''{0}''
+is.not.enclosing.class=''{0}'' is not an enclosing class
