conversion ui fixes

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -250,11 +250,7 @@ error.project.file.is.corrupted=Project file is corrupted
 
 title.cannot.convert.project=Cannot Convert Project
 dialog.title.convert.project=Convert Project
-label.project.has.older.format.text=The project ''{0}'' has an older format.
-label.project.has.older.format.the.following.conversions.will.be.performed.text=<html><body>The project ''{0}'' has an older format. The following conversions will be performed:</body></html>
-label.project.has.older.format.and.will.be.converted.text=<html><body>The project ''{0}'' has an older format. It will be converted to the new format.</body></html>
-radio.convert.project.text=&Convert to the new format now. You will not be able to open the project by earlier versions of IDEA.
-radio.dont.convert.project.text=Convert &later. Some features will be unavailable until you convert the project.
+label.text.project.has.older.format=<html><body>The project ''{0}'' has an older format and will be converted. You will not be able to open the project by earlier versions of IDEA. <a href="details">Details</a></body></html>
 label.text.unlock.read.only.files=The following files are read only. IDEA will unlock them.
 error.message.cannot.make.files.writable=Cannot make the following files writable:\n{0}
 label.text.project.was.succesfully.converted.old.version.was.saved.to.0=<html><body>Your project was succesfully converted. \
@@ -263,9 +259,6 @@ error.cannot.convert.project=Cannot convert project: {0}
 error.some.file.is.corrupted.message=<html><body>File ''{0}'' is corrupted: <br> {1} </body></html>
 message.files.doesn.t.exists.0.so.the.corresponding.modules.won.t.be.converted.do.you.want.to.continue=<html><body>The following files doesn''t exists: <br>\
   {0}The corresponding modules won''t be converted. Do you want to continue?</body></html>
-
-message.text.this.feature.is.not.available.for.project.in.older.format=<html><body>This feature is not available for project in older format. <br>\
-  Convert your project first (File | Convert Project).</body></html>
 
 select.in.project.settings=Project Structure
 select.in.file.structure=File Structure
