--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -123,7 +123,9 @@ flip.expression.intention.family.name=Flip Binary Expression
 flip.setter.call.intention.family.name=Flip Setter Call(s)
 adapter.to.listener.intention.family.name=Replace Adapter Extension with Listener Implementation
 reverse.for.loop.direction.intention.family.name=Reverse Direction of For Loop
-reverse.for.loop.direction.intention.name=Reverse direction of for loop.
+reverse.for.loop.direction.intention.name=Reverse direction of for loop
+replace.operator.assignment.with.postfix.increment.intention.family.name=Replace Operator Assignment with Postfix Increment
+replace.operator.assignment.with.postfix.increment.intention.name=Replace ''+='' with ''{0}++''
 
 #hand made
 demorgans.intention.name1=Replace '\\&\\&' with '||'
