--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -124,8 +124,8 @@ flip.setter.call.intention.family.name=Flip Setter Call(s)
 adapter.to.listener.intention.family.name=Replace Adapter Extension with Listener Implementation
 reverse.for.loop.direction.intention.family.name=Reverse Direction of For Loop
 reverse.for.loop.direction.intention.name=Reverse direction of for loop
-replace.operator.assignment.with.postfix.increment.intention.family.name=Replace Operator Assignment with Postfix Increment
-replace.operator.assignment.with.postfix.increment.intention.name=Replace ''+='' with ''{0}++''
+replace.operator.assignment.with.postfix.expression.intention.family.name=Replace Operator Assignment with Postfix Expression
+replace.postfix.expression.with.operator.assignment.intention.family.name=Replace Postfix Expression with Operator Assignment
 
 #hand made
 demorgans.intention.name1=Replace '\\&\\&' with '||'
