IDEADEV-40000 (Replace Postfix Increment with Assignment intention)

--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -126,6 +126,7 @@ reverse.for.loop.direction.intention.family.name=Reverse Direction of For Loop
 reverse.for.loop.direction.intention.name=Reverse direction of for loop
 replace.operator.assignment.with.postfix.expression.intention.family.name=Replace Operator Assignment with Postfix Expression
 replace.postfix.expression.with.operator.assignment.intention.family.name=Replace Postfix Expression with Operator Assignment
+replace.postfix.expression.with.assignment.intention.family.name=Replace Postfix Expression with Assignment
 
 #hand made
 demorgans.intention.name1=Replace '\\&\\&' with '||'
