--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -127,6 +127,7 @@ reverse.for.loop.direction.intention.name=Reverse direction of for loop
 replace.operator.assignment.with.postfix.expression.intention.family.name=Replace Operator Assignment with Postfix Expression
 replace.postfix.expression.with.operator.assignment.intention.family.name=Replace Postfix Expression with Operator Assignment
 replace.postfix.expression.with.assignment.intention.family.name=Replace Postfix Expression with Assignment
+replace.assignment.with.postfix.expression.intention.family.name=Replace Assignment with Postfix Expression
 
 #hand made
 demorgans.intention.name1=Replace '\\&\\&' with '||'
