--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1738,3 +1738,5 @@ listener.may.use.adapter.display.name=Class may extend adapter instead of implem
 listener.may.use.adapter.problem.descriptor=Class ''{0}'' may extend ''{1}'' instead of implementing <code>#ref</code> #loc
 listener.may.use.adapter.quickfix=Replace with ''extends {0}''
 listener.may.use.adapter.emtpy.methods.option=&Only warn when empty implementing methods are found
+unnecessary.inherit.doc.display.name=Unnecessary {@inheritDoc} JavaDoc Comment
+unnecessary.inherit.doc.problem.descriptor=JavaDoc comment containing only <code>#ref</code> is unnecessary
