--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -22,6 +22,8 @@ expand.boolean.intention.name=Expand boolean use to if-else
 expand.boolean.intention.family.name=Expand Boolean
 for.to.each.intention.name=Replace with ".each"
 for.to.each.intention.family.name=Replace For-In With Each
+each.to.for.intention.name=Replace with For-In
+each.to.for.intention.family.name=Replace Each With For-In
 convert.integer.to.hex.intention.name=Convert to hex
 convert.integer.to.hex.intention.family.name=Convert To Hexadecimal
 convert.integer.to.decimal.intention.name=Convert to decimal
