IDEADEV-38977: Allow to place annotations anywhere in Groovy 1.7

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -289,3 +289,4 @@ qualified.new.of.static.class=Qualified new of static class
 cannot.have.static.declarations=Inner classes cannot have static declarations
 unknown.class=unknown class ''{0}''
 is.not.enclosing.class=''{0}'' is not an enclosing class
+package.definition.cannot.have.modifiers=Package definiton cannot have modifiers
