buffered painting of tabs - take 1

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -26,6 +26,7 @@ ide.tree.showBusyIndicator=true
 ide.tree.waitForReadyTimout=250
 ide.tree.clearOnHideTime=120000
 ide.tree.autoscrollToVCenter=true
+ide.tabbedPane.bufferedPaint=true
 
 debugger.valueTooltipAutoShow=true
 debugger.valueTooltipAutoShow.description=Auto show tooltip on mouse over
