multithreaded per-index indexing (initial version, false by default)

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -2,6 +2,10 @@ fileIndex.background=false
 fileIndex.background.description=Build/update file indices in background
 fileIndex.background.restartRequired=true
 
+fileIndex.multithreaded=false
+fileIndex.multithreaded.description=When indexing a file start indexers in parallel threads
+fileIndex.multithreaded.restartRequired=false 
+
 actionSystem.fixLostTyping=true
 actionSystem.fixLostTyping.description=Redispatch events, lost between actions and dialog show/close
 actionSystem.fixStickyFocusedWindows=true
