--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -250,8 +250,9 @@ error.project.file.is.corrupted=Project file is corrupted
 
 title.cannot.convert.project=Cannot Convert Project
 dialog.title.convert.project=Convert Project
-label.text.project.has.older.format=<html><body>The project ''{0}'' has an older format and will be converted. You won''t be able to open the project by earlier versions of IDEA. <a href="details">Details</a></body></html>
-label.text.unlock.read.only.files=The following files are read only. IDEA will unlock them.
+label.text.project.has.older.format=<html><body>The project ''{0}'' has an older format and will be converted. You won''t be able to open the project by earlier versions of IDEA. <a href="details">Details</a><br>\
+  Old versions of project files will be saved to: ''{1}''</body></html>
+message.text.unlock.read.only.files=<html><body>The following files are read only. IDEA will unlock them.<br>{0}</body></html>
 error.message.cannot.make.files.writable=Cannot make the following files writable:\n{0}
 label.text.project.was.succesfully.converted.old.version.was.saved.to.0=<html><body>Your project was succesfully converted. \
   <br>Old versions of project files were saved to: ''{0}''</body></html>
