--- a/resources-en/src/messages/QuickFixBundle.properties
+++ b/resources-en/src/messages/QuickFixBundle.properties
@@ -214,7 +214,7 @@ change.new.operator.type.text=Change ''{0}'' to ''new {1}{2}''
 change.new.operator.type.family=Change new operator type
 
 fix.unused.symbol.injection.family=Add to Dependency Injection Annotations
-fix.unused.symbol.injection.text=Add ''{0}'' to dependency injection annotations list
+fix.unused.symbol.injection.text=Suppress for {0} annotated by ''{1}''
 fix.add.special.annotation.family=Add to Special Annotations
 fix.add.special.annotation.text=Add ''{0}'' to special annotations list
 
